--- a/css/propioCss.css
+++ b/css/propioCss.css
@@ -9,6 +9,8 @@ and open the template in the editor.
 */
 
 /*body{padding: 0px; margin: 0px;}*/
+
+/* INDEXXXXXXXXXXXXXXXXXXXXXXXXXXXX*/
 div a{text-decoration: none;}
 .bordeChuloAbajo{margin: 0px auto; font-size: 20px; border: 3px #e6e6e6 solid}
 .bordeChuloAbajo:hover{
@@ -71,7 +73,10 @@ div div .img-responsive {
 a{text-decoration: none; color:black;}
 a:hover{text-decoration: none; color:black;}
 
-
+/*EJERCICIOOOOOOOOOOOOOOOOS*/
+#textoAyuda{
+    opacity: 0;
+}
 
 
 .bordesCirculares{
