--- a/css/propioCss.css
+++ b/css/propioCss.css
@@ -153,11 +153,11 @@ and open the template in the editor.
     .letraLogin{
     }    
     #HitBee{
-        background-image: url(../imagenes/hitbee.png);
-        background-size: contain;
+        background-image: url(../imagenes/FotoHit.png);
         background-repeat: no-repeat;
+        background-position: bottom;
         height: 87px;
-        width: 192px;
+        width: 285px;
         display: inline-block;
     }
         
